[package]
name = "esp-host-bridge"
version = "0.1.0"
edition = "2024"
description = "Lightweight host metrics agent for UI like ESP displays over USB serial"
license = "MIT"

[dependencies]
serialport = "4"
sysinfo = "0.38"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
gethostname = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
